--- a/main-service/src/main/resources/application-test.properties
+++ b/main-service/src/main/resources/application-test.properties
@@ -4,6 +4,6 @@
 server.port=8080
 client.url=http://localhost:9090
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:stat
+spring.datasource.url=jdbc:h2:mem:ewm-main
 spring.datasource.username=stat
 spring.datasource.password=stat
