--- a/main-service/src/main/resources/application.properties
+++ b/main-service/src/main/resources/application.properties
@@ -4,6 +4,6 @@
 server.port=8080
 client.url=http://localhost:9090
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:6642/main
+spring.datasource.url=jdbc:postgresql://localhost:6543/ewm-main
 spring.datasource.username=main
 spring.datasource.password=main
