--- a/stat/stat-client/pom.xml
+++ b/stat/stat-client/pom.xml
@@ -10,7 +10,6 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <groupId>ru.practicum</groupId>
     <artifactId>stat-client</artifactId>
     <version>0.0.1-SNAPSHOT</version>
 
@@ -18,7 +17,7 @@
         <dependency>
             <groupId>ru.practicum</groupId>
             <artifactId>stat-dto</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
