--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,7 +37,7 @@ services:
       - ewm-db
     environment:
       - CLIENT_URL=http://stats-server:9090
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5433/ewm-main
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-db:5432/ewm-main
       - SPRING_DATASOURCE_USERNAME=main
       - SPRING_DATASOURCE_PASSWORD=main
 
@@ -45,7 +45,7 @@ services:
     image: postgres:16.1
     container_name: postgres-ewm-main-db
     ports:
-      - "6543:5433"
+      - "6543:5432"
     environment:
       - POSTGRES_USER=main
       - POSTGRES_PASSWORD=main
